@@ -6,15 +6,36 @@
   <name>BTL_OOP_143578_Nhom26</name>
   <dependencies>
 	  <dependency>
-		    <groupId>com.fasterxml.jackson.core</groupId>
-		    <artifactId>jackson-databind</artifactId>
-		    <version>2.16.0</version> 
-	  </dependency>
-      <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-databind</artifactId>
-        <version>2.1.0</version> <!-- Use the latest version available -->
-      </dependency>
+        <version>2.16.0</version>
+	  </dependency>
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-fxml</artifactId>
+      <version>21-ea+24</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/de.jensd/fontawesomefx -->
+    <dependency>
+      <groupId>de.jensd</groupId>
+      <artifactId>fontawesomefx</artifactId>
+      <version>8.9</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.8.9</version>
+    </dependency>
+    <dependency>
+      <groupId>org.controlsfx</groupId>
+      <artifactId>controlsfx</artifactId>
+      <version>11.1.2</version>
+    </dependency>
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-web</artifactId>
+      <version>17.0.2</version>
+    </dependency>
   </dependencies>
   <build>
     <sourceDirectory>src</sourceDirectory>
@@ -34,6 +55,21 @@
           <release>19</release>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>3.2.0</version>
+        <configuration>
+            <mainClass>application.Main</mainClass>
+            <classpathScope>runtime</classpathScope>
+            <arguments>
+                <argument>--module-path</argument>
+                <argument>${project.build.directory}/libs</argument>
+                <argument>--add-modules</argument>
+                <argument>javafx.controls,javafx.fxml</argument>
+            </arguments>
+        </configuration>
+    </plugin>
     </plugins>
   </build>
 </project>
